--- a/public/calendar.css
+++ b/public/calendar.css
@@ -23,20 +23,39 @@
     text-transform: capitalize;
     margin-right: 20px;
 }
-#dayCaption{
+#weekCaption{
+    width: 100%;
+    display: grid;
+    grid-template-columns: 10px repeat(7, 1fr) 10px;
+    margin-top: 20px;
+    border-radius: 10px;
+    background-color: #333;
+}
+.dayLabel{
+    padding-block: 10px;
+    color: #f0f0f0;
+    text-align: center;
+    border-left: #f0f0f0 1px solid;
+    border-right: #f0f0f0 1px solid;
+}
+#calendarGrid{
     margin-block: 20px;
     gap: 10px;
     width: 100%;
     display: grid;
     grid-template-columns: repeat(7, 1fr);
     grid-template-rows: repeat(5, 1fr);
-    overflow-y: scroll;
+    background-color: cadetblue;
+    padding: 10px;
+    box-shadow: 2px 2px 2px black;
+    border-radius: 15px;
 }
 .day{
     display: flex;
     flex-direction: column;
     width: 100%;
     height: 100%;
+    background-color: #f0f0f0;
     border-radius: 5px;
     border: 2px #333 solid;
     padding: 5px;
