--- a/public/index.css
+++ b/public/index.css
@@ -7,7 +7,7 @@
     border: 2px #333 solid;
     border-radius: 10px;
     padding: 20px;
-    margin: 20px;
+    margin-bottom: 20px;
     flex-grow: 1;
 }
 .task-grid{
@@ -60,6 +60,14 @@
     display: flex;
     align-items: center;
     justify-content: flex-start;
+    span{
+        background-color: green;
+        color: white;
+        margin-right: 20px;
+        border-radius: 10px;
+        padding: 5px 10px 5px 10px;
+
+    }
 }
 
 .task-category{
@@ -83,6 +91,7 @@
     align-items: center;
     font-size: x-large;
     border-left: 2px solid #333;
+    overflow: hidden;
 }
 
 .task-description{
