--- a/public/style.css
+++ b/public/style.css
@@ -30,6 +30,7 @@ h1,h2,h3,h4 {
     align-items: flex-start;
     flex-grow: 1;
     width: 75%;
+    margin-top: 20px;
 }
 
 header {
@@ -112,6 +113,9 @@ footer{
 }
 .colorAdmin{
     background-color: pink;
+}
+.colorCompleted{
+    background-color: grey;
 }
 
 .task-button{
