--- a/views/partials/dayCaption.ejs
+++ b/views/partials/dayCaption.ejs
@@ -10,21 +10,14 @@
             <svg width="18px" height="18px" viewBox="0 0 24 24" fill="limegreen" xmlns="http://www.w3.org/2000/svg">
                 <path d="M21 12C21 16.9706 16.9706 21 12 21C7.02944 21 3 16.9706 3 12C3 7.02944 7.02944 3 12 3C16.9706 3 21 7.02944 21 12Z" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
             </svg>
-            <p><span>10</span> Done</p>
-        </div>
-
-        <div class="task-late">
-            <svg width="18px" height="18px" viewBox="0 0 24 24" fill="yellow" xmlns="http://www.w3.org/2000/svg">
-            <path d="M21 12C21 16.9706 16.9706 21 12 21C7.02944 21 3 16.9706 3 12C3 7.02944 7.02944 3 12 3C16.9706 3 21 7.02944 21 12Z" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-            </svg>
-            <p><span>10</span> Late</p>
+            <span>10</span>
         </div>
 
     <div class="task-pending">
         <svg width="18px" height="18px" viewBox="0 0 24 24" fill="gray" xmlns="http://www.w3.org/2000/svg">
         <path d="M21 12C21 16.9706 16.9706 21 12 21C7.02944 21 3 16.9706 3 12C3 7.02944 7.02944 3 12 3C16.9706 3 21 7.02944 21 12Z" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
         </svg>
-        <p><span>10</span> Pending</p>
+        <span>10</span>
     </div>
     </div>
     <% } else { %>
