--- a/views/taskViewer.ejs
+++ b/views/taskViewer.ejs
@@ -11,10 +11,21 @@
 </head>
 
 <body>
-    <div id="layout" class="color<%= task.category %>">
+    <% 
+        let theme = ''
+        if (task.completed){
+            theme = "colorCompleted"
+        } else {
+            theme = `color${task.category}`
+        }
+        %>
+    <div id="layout" class="<%= theme %>">
 
         <article class="card">
             <h1 class="task-title">
+                <% if (task.completed){ %>
+                    Completed:
+                    <% } %>
                 <%= task.title %>
             </h1>
             <h2 class="task-category color<%= task.category %>">
@@ -39,6 +50,7 @@
                             stroke-linecap="round" stroke-linejoin="round" />
                     </svg>
                 </button>
+                <% if(!task.completed){ %>
                 <button class="task-button" id="task-complete">
                     <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M8.5 12.5L10.5 14.5L15.5 9.5" stroke-linecap="round" stroke-linejoin="round" />
@@ -59,6 +71,7 @@
                         <path d="M14.5 11L14 16" stroke-linecap="round" />
                     </svg>
                 </button>
+                <% } %>
             </div>
         </article>
     </div>
