--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,3 @@
 <footer>
-    <p>Website created by <span>Cristian Sanchez</span></p>
+    <p>Website created by <span><a href="https://github.com/Asthere0n">Cristian Sanchez</a></span></p>
 </footer>
