--- a/views/new-task.ejs
+++ b/views/new-task.ejs
@@ -53,7 +53,7 @@
     
                 <div class="formBox" id="frequency">
                     <label for="frequencySelector" class="hiddenLabel">Frequency</label>
-                    <div class="innerBox">
+                    <div class="innerBox" id="frequencySelector">
                         <div class="radioSelector">
                             <input type="radio" name="frequency" id="Once" value="Once" required>
                             <label for="Once">Once</label>
