--- a/views/partials/completedTaskTemplate.ejs
+++ b/views/partials/completedTaskTemplate.ejs
@@ -3,7 +3,8 @@
 <article class="task-template">
 
     <!-- TITLE -->
-    <h3 class="task-title"><span>Completed: </span><%= task.title %></h3>
+    <h3 class="task-complete">Completed</h3>
+    <h3 class="task-title"><%= task.title %></h3>
     
     <!-- CATEGORY -->
     <div class="task-category color<%= category %>">
