--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,4 @@
 <footer>
+    <%- include("./navBar.ejs") %>
     <p>Website created by <span><a href="https://github.com/Asthere0n">Cristian Sanchez</a></span></p>
 </footer>
