--- a/views/partials/completedTaskTemplate.ejs
+++ b/views/partials/completedTaskTemplate.ejs
@@ -3,7 +3,7 @@
 <article class="task-template">
 
     <!-- TITLE -->
-    <h3 class="task-complete">Completed</h3>
+    <h3 class="task-complete">Complete</h3>
     <h3 class="task-title"><%= task.title %></h3>
     
     <!-- CATEGORY -->
